  
  * su-to-root:
    - Fix support for sux.
    - Fix command quoting for sudo.  Closes: #465136. Thanks Daniel Hahler.
    - Fix typo passwd->password. Closes: #462645. Thanks Salvatore Bonaccorso.

  * examples/translate_menus:
    - automatic conversion from old section names to new names would replace
      Locking by Lockinging. Closes: #468385. Thanks Yves-Alexis Perez.

  * No more install the default directory. Closes: #467238.

 -- Bill Allombert <ballombe@debian.org>  Fri, 29 Feb 2008 10:49:43 +0100

menu (2.1.37) unstable; urgency=low

  * the "what happened to release early, release often ?" release.
  * Handling of l10n by Christian Perrier:
    + programs translations:
      - Dutch updated by Tim Dijkstra. Closes: #446009
      - Traditional Chinese updated by Kanru Chen. Closes: #446125
      - Russian updated by Yuri Kozlov. Closes: #446136
      - Spanish updated by Javier Fernández-Sanguino Peña. Closes: #446309
      - Finnish updated by Tommi Vainikainen. Closes: #445927
      - Spanish updated by Jacobo Tarrio. Closes: #446481
      - Czech updated by Miroslav Kure. Closes: #446677
      - Dutch updated by Tim Dijkstra. Closes: #446009
      - Vietnamese updated by Clytie Siddall. Closes: #446993
      - German updated by Sven Joachim. Closes: #448943
      - Norwegian Bokmål updated by Hans F. Nordhaug.
        Closes: #450959, #451298
      - Basque by Piarres Beobide. Closes: #445939
      - Swedish by Daniel Nylander. Closes: #445948
      - Polish by Wojciech Zareba. Closes: #445977, #445962
      - Thai by Theppitak Karoonboonyanan. Closes: #445931
      - Portuguese by Antonio Amorim. Closes: #445994
    + Menu sections translations:
      - Belarusian updated by Pavel Piatruk. Closes: #446557
      - Czech updated by Miroslav Kure. Closes: #446677
      - Galician updated by Jacobo Tarrio. Closes: #446616
      - German updated by Sven Joachim. Closes: #447044
      - Korean updated by Sunjae Park. Closes: #448051